--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/dayz-favicon.png" />
+    <link rel="manifest" href="/dayz/manifest.webmanifest" />
+    <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dayz</title>
   </head>
