--- a/public/404.html
+++ b/public/404.html
@@ -1,9 +1,11 @@
+html
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="refresh" content="0; url=/" />
-  </head>
-  <body>
-    <p>Redirecting...</p>
-  </body>
+<head>
+  <meta http-equiv="refresh" content="0; url=./index.html" />
+</head>
+<body>
+  <p>Redirection en cours...</p>
+</body>
 </html>
